package com.mikeescom.commandpattern;

public interface Command {
    void execute();
}
